# ckanext-resource-docs

./: CHANGELOG.md  README.md  cliff.toml  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/resource_docs/: config_declaration.yaml  exception.py  model.py  plugin.py  views.py
ckanext/resource_docs/assets/: script.js  webassets.yml
ckanext/resource_docs/assets/css/: styles.css
ckanext/resource_docs/assets/js/: rdocs-jsoneditor-docs.js  rdocs-jsoneditor-schema.js
ckanext/resource_docs/logic/: action.py
ckanext/resource_docs/templates/package/: resource_read.html
ckanext/resource_docs/templates/resource_docs/: edit.html
ckanext/resource_docs/tests/: test_action.py  test_plugin.py
